--- a/pubby_server/pubspec.yaml
+++ b/pubby_server/pubspec.yaml
@@ -4,6 +4,7 @@ version: 0.0.0
 dependencies: 
   angel_common: ^1.0.0
   angel_hot: ^1.0.0
+  angel_paginate: ^1.0.0
   angel_security: ^1.0.0
   github: ^3.0.0
   postgres: ^0.9.5
